[project]
name = "tron-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "sqlalchemy[asyncio]>=2.0.40",
]
